force-app/main/default/objects/Event_Questionnaire__c/Event_Questionnaire__c.object-meta.xml
<CustomObject>
    <label>Event Questionnaire</label>
    <nameField>
        <displayFormat>Q-{0}</displayFormat>
        <label>Event Questionnaire Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Questionnaires</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>