force-app/main/default/objects/Event_Questionnaire__c/fields/Photo_Authorization__c.field-meta.xml
<CustomField>
    <fullName>Photo_Authorization__c</fullName>
    <label>Photo Authorization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>