force-app/main/default/objects/Event_Questionnaire__c/fields/Subscription__c.field-meta.xml
<CustomField>
    <fullName>Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subscription</label>
    <referenceTo>Subscription__c</referenceTo>
    <relationshipLabel>Event Questionnaires</relationshipLabel>
    <relationshipName>Event_Questionnaires</relationshipName>
    <type>Lookup</type>
</CustomField>