force-app/main/default/objects/Event_Questionnaire__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Event_Relevance__c</columns>
    <columns>Recommends_Event__c</columns>
    <columns>Photo_Authorization__c</columns>
    <columns>Suggestions__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>